test/pass/internal/if_raise_return_fold.lly
define f(a: Integer) : Integer
{
    if a == 1:
        raise ValueError::new("")
    else:
        raise ValueError::new("")
}
