test/fail/exceptions/errorfunc.lly
define f() { raise ValueError::new("") }
